<?xml version="1.0" encoding="utf-8"?>
<!--
    This program is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    This program is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->

<!-- For style guide: https://developer.android.com/design/style/writing.html -->

<resources xmlns:tools="http://schemas.android.com/tools" tools:locale="en">

    <string name="application_name">Simple Rss</string>

    <string name="empty_tag_list_view">Pull down to refresh tag</string>
    <string name="empty_manage_list_view">Press the add button to add a feed</string>
    <string name="empty_favourites_list_view">Long press a feed item and select \'favourite\' to add a favourite</string>

    <!-- The All tag.-->
    <string name="all_tag">All</string>
    <string name="tags">TAGS</string>

    <!-- Navigation drawer toggle accessibility descriptions.-->
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <!-- ActionBar icon descriptions. -->
    <string name="ic_action_add">Add</string>
    <string name="ic_action_unread">Unread</string>
    <string name="ic_action_share">Share</string>

    <!-- ActionBar subtitle for unread items. -->
    <plurals name="actionbar_subtitle_unread">
        <item quantity="zero">%d unread</item>
        <item quantity="one">%d unread</item>
        <item quantity="two">%d unread</item>
        <item quantity="few">%d unread</item>
        <item quantity="many">%d unread</item>
        <item quantity="other">%d unread</item>
    </plurals>

    <!-- Pull to Refresh text. -->
    <string name="pull_label">Swipe down to refresh</string>
    <string name="refreshing_text">Checking for items</string>

    <!-- Add/Edit feed dialog titles. -->
    <string name="dialog_title_add">Add feed</string>
    <string name="dialog_title_edit">Edit feed</string>

    <!-- Add/Edit feed dialog EditText hints. -->
    <string name="dialog_feed_url_hint">Url</string>
    <string name="dialog_feed_tag_hint">Tags</string>

    <!-- Add/Edit feed dialog button texts. -->
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_accept">Accept</string>
    <string name="dialog_checking">Checking…</string>

    <!-- Long click feed item context menu. -->
    <string name="feed_item_context_favourite">Favourite</string>
    <string name="feed_item_context_save_image">Save Image</string>
    <string name="feed_item_context_open">Open</string>
    <string name="feed_item_context_copy">Copy</string>

    <!-- Toast notifications. -->
    <string name="toast_url_copied">URL copied:</string>
    <string name="toast_invalid_feed">Can’t find feed</string>
    <string name="toast_added_feed">Added %s</string>

    <!-- Manage context action bar icon descriptions. -->
    <string name="manage_item_clear_content">Delete content</string>
    <string name="manage_item_delete">Delete feed</string>

    <!-- Favourite context action bar icon descriptions. -->
    <string name="favourite_item_delete">Delete favourites</string>

    <!-- Manage and Favourites multi selected strings. -->
    <string name="select_all">Select all</string>
    <plurals name="items_selected">
        <item quantity="zero">%s selected</item>
        <item quantity="one">%s selected</item>
        <item quantity="two">%s selected</item>
        <item quantity="few">%s selected</item>
        <item quantity="many">%s selected</item>
        <item quantity="other">%s selected</item>
    </plurals>

    <!-- Settings general strings. -->
    <string name="switch_off">Off</string>
    <string name="switch_on">On</string>

    <string name="no">No</string>
    <string name="yes">Yes</string>

    <!-- Settings automatic Refreshing strings. -->
    <string name="automatic_refreshing">Automatic refreshing</string>

    <string name="automatic_refreshing_interval">Refresh interval</string>
    <string name="automatic_refreshing_interval_summary">Time between two consecutive refreshes</string>

    <!-- Settings images strings. -->
    <string name="images">Images</string>
    <string name="images_download">Download images</string>
    <string name="images_thumbnail_quality">Thumbnail quality (WebP)</string>
    <string name="images_thumbnail_quality_summary">Only affects new downloads</string>

    <!-- Settings advanced. -->
    <string name="advanced">Advanced</string>
    <string name="clear_read_history_title">Clear read history</string>
    <string name="clear_read_history_summary">Set all items to unread</string>
    <string name="clear_read_items_dialog_title">Clear read history</string>
    <string name="clear_read_items_dialog_summary">Are you sure you want to clear read history?</string>

    <!-- Settings source code. -->
    <string name="source_code">Source code</string>

    <!-- Save image results -->
    <string name="image_downloaded_success">Downloaded image to Pictures/%s</string>
    <string name="image_downloaded_failed">Image download failed</string>

</resources>
