<?xml version="1.0" encoding="utf-8"?>
<!--
    This program is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    This program is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->

<PreferenceScreen
   xmlns:android="http://schemas.android.com/apk/res/android">

   <PreferenceScreen
      android:title="@string/automatic_refreshing"
      android:icon="@drawable/ic_action_refresh">
      <SwitchPreference
         android:defaultValue="true"
         android:key="refreshing_enabled"
         android:summaryOff="@string/automatic_refreshing_disabled"
         android:summaryOn="@string/automatic_refreshing_enabled"
         android:switchTextOff="@string/switch_off"
         android:switchTextOn="@string/switch_on"
         android:title="@string/automatic_refreshing"/>
      <ListPreference
         android:defaultValue="120"
         android:dependency="refreshing_enabled"
         android:dialogTitle="@string/automatic_refreshing_interval"
         android:entries="@array/refresh_interval_titles"
         android:entryValues="@array/refresh_interval_values"
         android:key="refresh_interval"
         android:summary="@string/automatic_refreshing_interval_summary"
         android:title="@string/automatic_refreshing_interval"/>
   </PreferenceScreen>

   <PreferenceScreen
      android:title="@string/images"
      android:icon="@drawable/ic_action_picture">
      <SwitchPreference
         android:defaultValue="true"
         android:key="images_enabled"
         android:switchTextOff="@android:string/no"
         android:switchTextOn="@android:string/yes"
         android:title="@string/images_download"/>
      <ListPreference
         android:defaultValue="75"
         android:dependency="images_enabled"
         android:dialogTitle="@string/images_thumbnail_quality"
         android:entries="@array/thumbnail_quality"
         android:entryValues="@array/thumbnail_quality_values"
         android:key="thumbnail_quality"
         android:summary="@string/images_thumbnail_quality_summary"
         android:title="@string/images_thumbnail_quality"/>
   </PreferenceScreen>

   <PreferenceScreen
      android:title="@string/advanced"
      android:icon="@drawable/ic_action_settings">
      <com.poloure.simplerss.DialogConfirm
         android:title="@string/clear_read_history_title"
         android:summary="@string/clear_read_history_summary"
         android:key="clear_unread_items"
         android:dialogTitle="@string/clear_read_items_dialog_title"
         android:dialogMessage="@string/clear_read_items_dialog_summary"
         android:negativeButtonText="@android:string/no"
         android:positiveButtonText="@android:string/yes"/>
   </PreferenceScreen>

   <PreferenceScreen
      android:summary="https://github.com/poloure/rss"
      android:title="@string/source_code"
      android:icon="@drawable/ic_action_about">
      <intent
         android:action="android.intent.action.VIEW"
         android:data="https://github.com/poloure/rss"/>
   </PreferenceScreen>

</PreferenceScreen>