<?xml version="1.0" encoding="utf-8"?>
<!--
    This program is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    This program is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->

<menu
   xmlns:android="http://schemas.android.com/apk/res/android">
   <item
      android:title="@string/feed_item_context_favourite"
      android:id="@+id/favourite"/>
   <item
      android:title="@string/feed_item_context_open"
      android:id="@+id/open"/>
   <item
      android:title="@string/feed_item_context_copy"
      android:id="@+id/copy"/>
</menu>
