<?xml version="1.0" encoding="utf-8"?>
<!--
 This program is free software: you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
 the Free Software Foundation, either version 3 of the License, or
 (at your option) any later version.

 This program is distributed in the hope that it will be useful,
 but WITHOUT ANY WARRANTY; without even the implied warranty of
 MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 GNU General Public License for more details.

 You should have received a copy of the GNU General Public License
 along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">

        <EditText
            android:id="@+id/dialog_url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="8dp"
            android:drawableStart="@drawable/ic_action_web_site"
            android:hint="@string/dialog_feed_url_hint"
            android:inputType="textUri|textNoSuggestions"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:singleLine="true"/>

        <MultiAutoCompleteTextView
            android:id="@+id/dialog_tags"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="8dp"
            android:drawableStart="@drawable/ic_action_labels"
            android:hint="@string/dialog_feed_tag_hint"
            android:inputType="textCapWords|textNoSuggestions"
            android:paddingTop="8dp"
            android:singleLine="true"/>
    </LinearLayout>

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/dialog_button_negative"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/dialog_cancel"/>

        <Button
            android:id="@+id/dialog_button_positive"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/dialog_accept"/>
    </LinearLayout>

</LinearLayout>

